# ontology-llm-slr

./: todo.org
code/: .envrc  .gitignore  pyproject.toml  requirements-dev.txt  requirements.txt
code/first_screen/: customizations_log.csv  features_polars_interactive.ipynb  first_screen.bib  first_screen_zotero.bib  keys.txt  other_articles.csv
code/first_screen/auto/: first_screen_zotero.el
code/initial/: li2025LargeLanguageModels_references.bib  seed_list.bib  seed_papers.bib
code/sources/: acl.csv  acm.csv  arxiv.csv  ieeexplore.csv  scopus.csv
code/sources/bib/: scopus.bib
code/sources/bib/acm/: acm_dedup.bib
code/sources/bib/acm/acm_parts/: acm_part_02.bib  acm_part_03.bib
code/sources/bib/ieeexplore/parts/: ieeexplore_part_01.bib  ieeexplore_part_02.bib  ieeexplore_part_03.bib  ieeexplore_part_04.bib
code/sources/bib/sciencedirect/sciencedirect_parts/: ScienceDirect_part_03.bib  ScienceDirect_part_13.bib  ScienceDirect_part_16.bib  ScienceDirect_part_20.bib  ScienceDirect_part_24.bib  (+14 more)
code/sources/parts/: acl.bib
code/sources/parts/acm/: acm.bib
code/sources/parts/arxiv/: id_list.txt
code/sources/raw_bib/: scopus_clean.bib  scopus_narrow.bib
code/sources/raw_bib/arxiv/: arxiv.bib  full_https.txt
code/sources/raw_bib/ieeexplore/: ieeexplore.bib
code/sources/raw_bib/sciencedirect_narrow/: sciencedirect_narrow.bib
code/sources/zotero_bib/: acl.bib  acm.bib  ieeexplore.bib  sciencedirect_narrow.bib  scopus_narrow.bib
code/src/ontology_llm_slr/sources/: acl-anthology.py  arxiv-ids.py  arxiv-search.py  arxiv.py
notes/: main.tex  (+3 more)
(+96 files in other folders)
