[project]
name = "ontology-llm-slr"
version = "1.0.0"
description = "Scripts for downloading and processing articles from different sources for SLR"
authors = [
  {name="Upal Bhattacharya", email="u.bhattacharya@uu.nl"},
]
readme = "README.md"
dynamic = ["dependencies", "optional-dependencies"]
requires-python = ">=3.12"

[tool.setuptools.dynamic]
dependencies = {file = ["requirements.txt"]}
optional-dependencies.dev = { file = ["requirements-dev.txt"] }

[build-system]
requires = ["setuptools", "setuptools-scm"]
build-backend = "setuptools.build_meta"
